# WorldQuant-Alphas

./: README.md  pyproject.toml
configs/: research.yaml
data/: india_equities_sample.csv  india_factors.csv  india_factors_raw.csv
docs/: architecture.md  roadmap.md
experiments/: runs.jsonl
notebooks/: 01_research_walkthrough.ipynb
scripts/: build_factors.py  build_smoke_test.py  fetch_factor_data.py  fetch_nse_data.py  generate_sample_data.py  validate_data.py
src/wqalpha/: __init__.py  __main__.py  backtest.py  cli.py  config.py  dashboard.py  data.py  dataquality.py  experiment.py  factors.py  features.py  metrics.py  operators.py  registry.py  risk.py  types.py  universe.py  visualization.py  walkforward.py
src/wqalpha/alphas/: __init__.py  worldquant101.py
src/wqalpha_india.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_alphas.py  test_backtest.py  test_metrics.py  test_operators.py  test_research_stack.py
